Update: update the title to be hello zhen

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "rn_starter_template",
+    "name": "hello zhen",
     "slug": "rn_starter_template",
     "version": "1.0.0",
     "orientation": "portrait",
